2013-10-17  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSException.m:
	* Headers/Foundation/NSThread.h: Add trivial implementation of
	+[NSThread callStackSymbols] that uses GSStackTrace.

2013-10-15  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Foundation/NSDate.h,
	* Source/NSDate.m:
	Add 10.6 class method dateWithTimeInterval:sinceDate:
	Patch by Marcian Lytwyn <marcian.lytwyn@advcsi.com>

2013-10-04  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSTimeZone.m: Fix bug with byte swapping ... use NSByteOrder.h

2013-10-01  Richard Frith-Macdonald <rfm@gnu.org>

        * config/config.align.c: Try to more reliably detect whether word
        alignment is needed.
        * Source/NSUserDefaults.m: Fix failure to send notification when
        defaults are updated.

2013-09-18  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSTLS.h:
        * Source/GSTLS.m:
        * Source/NSFileHandle.m:
        * Headers/Foundation/NSFileHandle.h:
        Add mechanism to set the contents of TLS certificate and key files
        in memory rather than reading from disk.  Expose TLS property keys
        in the NSFileHandle header to allow more control over certificates.

2013-09-10  Richard Frith-Macdonald <rfm@gnu.org>

        * configure.ac: Check for another unicode header
        * Headers/GNUstepBase/config.h.in: regenerate
        * configure: regenerate
        * Source/Additions/Unicode.m: If ICU is available, use it to obtain
        default C-string encoding.

2013-09-09  Pirmin Braun <pb@intars.de>

        * Source/Additions/GSMime.m: When creating a child parser, pass on
        the flag to say we are parsing HTTP rather than MIME.
        
2013-09-09  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/Additions/GSMime.m: Add comments and a further fallback
        mechanism for parsing HTTP when the default encoding is set.
        * Source/NSUnarchiver.m: Fix integer size values to use constants
        from stdint.h
